# tabpfnbenchmark

./: LICENSE  README.md  TabPFN_CommonScript-Bottom_CPU.py  TabPFN_CommonScript-Bottom_GPU.py  TabPFN_CommonScript-Top.py  pyproject.toml  training_input.csv
Arasteh_amyloidosis/: TabPFN_CardiacAmyloidosis_CPU.py  TabPFN_CardiacAmyloidosis_GPU.py  cohort_flag_TabPFN_HPO_best_params.json
Arasteh_esophagus/: GroundTruth_bi_TabPFN_HPO_best_params.json  TabPFN_Esophageal_CPU.py  TabPFN_Esophageal_GPU.py
Arasteh_hearingLoss/: Diagnoses_TabPFN_HPO_best_params.json  TabPFN_HearingLoss_CPU.py  TabPFN_HearingLoss_GPU.py
Arasteh_metastatic/: Metastatic_TabPFN_HPO_best_params.json  TabPFN_MetDis_CPU.py  TabPFN_MetDis_GPU.py
FOSP_1_Year_alive/: TabPFN_FOSP_1_CPU.py  TabPFN_FOSP_1_GPU.py  alive_year1_TabPFN_HPO_best_params.json
FOSP_3_Year_alive/: TabPFN_FOSP_3_CPU.py  TabPFN_FOSP_3_GPU.py  alive_year3_TabPFN_HPO_best_params.json
FOSP_5_Year_alive/: TabPFN_FOSP_5_CPU.py  TabPFN_FOSP_5_GPU.py  alive_year5_TabPFN_HPO_best_params.json
FOSP_CancerDeath/: TabPFN_FOSP_CD_CPU.py  TabPFN_FOSP_CD_GPU.py  cancer_death_TabPFN_HPO_best_params.json
FOSP_OverallDeath/: TabPFN_FOSP_OD_CPU.py  TabPFN_FOSP_OD_GPU.py  overall_death_TabPFN_HPO_best_params.json
SEER_HCC/: LungMets_TabPFN_HPO_best_params.json  TabPFN_SEER-HCC_CPU.py  TabPFN_SEER-HCC_GPU.py
SEER_OST/: 5_Year_Survival_TabPFN_HPO_best_params.json  TabPFN_SEER-OST_CPU.py  TabPFN_SEER-OST_GPU.py
SEER_RCC/: Survival months bi_TabPFN_HPO_best_params.json  TabPFN_SEER-RCC_CPU.py  TabPFN_SEER-RCC_GPU.py
